bug 224035 [gtk2] Paste from Evolution to Composer will have garbage character r  = robin.lu sr = blizzard a  = asa